--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,13 @@
       <version>7.3.0</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-java</artifactId>
+      <version>6.9.1</version>
+    </dependency>
+
   </dependencies>
 
   <build>
