--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
       <version>6.9.1</version>
     </dependency>
 
+    <dependency>
+      <groupId>io.cucumber</groupId>
+      <artifactId>cucumber-testng</artifactId>
+      <version>6.9.1</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
@@ -48,7 +55,7 @@
         <version>3.0.0-M5</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>testng-only-second.xml</suiteXmlFile>
+            <suiteXmlFile>testng-cucumber.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
